k8s-rpi-apps-nextcloud/02-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-storage
          emptyDir: {}
        - name: mysql-dump
          emptyDir: {}
      containers:
        - name: mysql
          image: 'docker.io/library/mariadb:10.5.12'
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
        - name: mysql-backup-daemon
          image: 'quay.io/vadimzharov/podbackup:latest'
          command:
            - podbackup
          args:
            - backup-sql-daemon
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 150m
              memory: 128Mi
          lifecycle:
            postStart:
              exec:
                command:
                  - podbackup
                  - restore-sql
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
