k8s-rpi-apps-nextcloud/03-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
  - port: 80
  selector:
    app: nextcloud
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud-storage
          emptyDir: {}
      containers:
        - name: nextcloud
          image: 'docker.io/library/nextcloud:stable'
          ports:
            - name: nextcloud-ui
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 150m
              memory: 128Mi
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
        - name: nextcloud-backup-daemon
          image: 'quay.io/vadimzharov/podbackup:latest'
          command:
            - podbackup
          args:
            - backup-daemon
          resources:
            limits:
              cpu: 800m
              memory: 128Mi
            requests:
              cpu: 350m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /nextcloud
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
