k8s-rpi-apps-nextcloud/06-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: nextcloud-redis
  name: nextcloud-redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud-redis
    spec:
      containers:
      - args:
        - --save
        - ""
        - --appendonly
        - "no"
        image: redis:6.2.4-alpine
        imagePullPolicy: IfNotPresent
        name: redis
        resources:
          requests:
            cpu: 30m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 128Mi             
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nextcloud-redis
  name: nextcloud-redis
spec:
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: nextcloud-redis
---
