k8s-rpi-apps-nextcloud/04-secured-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/nc-mysqlcreds"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<nextcloudhostname>`)
    kind: Rule
    services:
    - name: nextcloud
      port: 80
  tls:
    certResolver: godaddy
